Modified models, added service checks in AlertsControllers and more.
MODIFY: Alert, Host and Service model
To declare nullify when destroying a part od a relationship.

ADD: Service checks
Must exist a service in order to crete/update an alert.

ADD: List of alerts in ServicesController show action.

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -78,6 +78,7 @@ en:
       resume: "Resume"
       resume_helper: "The function used to resume the data to show the results of multiple hosts."
       hosts: "Hosts"
+      alerts: "Alerts"
       created_at: "Created at"
       updated_at: "Updated at"
     notice:
