--- a/config/locales/alerts/en.yml
+++ b/config/locales/alerts/en.yml
@@ -46,13 +46,14 @@ en:
       active: "Active"
       inactive: "Inactive"
       service: "Service"
+      service_not_assigned: "Not assigned"
       service_helper: "The service to which results are watched."
       condition: "Condition"
       condition_helper: "The condition to match in order to open an incident."
       limit: "Limit"
       limit_placeholder: "The limit value of the condition."
       target: "Target"
-      target_helper: "Selects if the condition have to match with the global result of a service, or only with at least one of the host assigned to the service."
+      target_helper: "Selects if the condition have to match with the results of all the hosts assigned to the service or only with one of them."
       created_at: "Created at"
       updated_at: "Updated at"
     notice:
@@ -62,6 +63,7 @@ en:
     error:
       not_found: "The alert with the requested ID doesn't exist."
       not_destroyed: "Alert (%{name}) couldn't be destroyed. Please, try again."
+      services_not_exist: "To create/update an alert, <b>you have to create a service first</b>."
       name_invalid: "The name is invalid, length must be between 2 and 30 characters."
       active_invalid: "The activation status is invalid. Check it and try again."
       service_invalid: "The service selected is invalid or isn't available at the moment."
