Added information fields on show action of UsersController and AlertController.
ADD: Users button on index and show actions of AlertsController
It links to the managements page for the User-Alert relation.

ADD: Information fields for User and Alert show actions
They show the users subscribed and the subscribed alerts.

--- a/config/locales/alerts/en.yml
+++ b/config/locales/alerts/en.yml
@@ -12,14 +12,15 @@ en:
       condition_less_than_or_equal_to: "Value less or equal to limit"
       condition_less_than: "Value less than limit"
     targets:
-      target_service: "The resume value of the service"
-      target_host: "Individual values of the hosts"
+      target_service: "All monitored hosts"
+      target_host: "At least one monitored host"
     index:
       title: "Alerts management"
       subtitle: "viewing all alerts"
       button:
         new: "Create an alert"
         show: "View"
+        users: "Users"
         edit: "Edit"
         destroy: "Destroy"
         destroy_confirmation: "Do you really want to destroy this alert?"
@@ -58,12 +59,13 @@ en:
       service: "Service"
       service_not_assigned: "Not assigned"
       service_helper: "The service to which results are watched."
-      condition: "Condition"
-      condition_helper: "The condition to match in order to open an incident."
+      condition: "Activation condition"
+      condition_helper: "The condition to match in order to activate the alert."
       limit: "Limit"
       limit_placeholder: "The limit value of the condition."
       target: "Target"
-      target_helper: "Selects if the condition have to match with the results of all the hosts assigned to the service or only with one of them."
+      target_helper: "Selects if the condition has to match with the results of all the hosts assigned to the service or only with one of them."
+      users: "Users subscribed"
       created_at: "Created at"
       updated_at: "Updated at"
     notice:
