Bugfixes and inactive host check
MODIFY: Bugfix in services form.
There is an incorrect translation in clean_interval field.

MODIFY: Check inactive hosts in ServiceProbeWorker
Now it only performs the probe over active hosts. If every host assigned
is inactive, no reuslt is saved.

MODIFY: Bugfix in ServiceProbeWorker
When the probe of a service becomes unavailable, the service gets becomes
inactivated and the job stops until the problem gets solved or the
application restarted.

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -70,11 +70,11 @@ en:
       probe: "Probe"
       probe_not_found: "The probe selected isn't available."
       interval: "Interval"
-      interval_placeholder: "Testing interval"
-      interval_helper: "The time between tests of the service."
+      interval_placeholder: "Testing interval (seconds)"
+      interval_helper: "The time (in seconds) between executions of the service's probe."
       clean_interval: "Clean interval"
-      clean_interval_placeholder: "Clean interval"
-      clean_interval_helper: "The time that the results of the testing are stored."
+      clean_interval_placeholder: "Clean interval (seconds)"
+      clean_interval_helper: "The time (in seconds) that the results of the testing are stored."
       resume: "Resume"
       resume_helper: "The function used to resume the data to show the results of multiple hosts."
       hosts: "Hosts"
