Added UDP ping and TCP connection probes
ADD: UDP ping
Added a probe to test UDP connectivity using a ping test. It sends
a message to a UDP port and waits for the same message in response.

ADD: TCP connection probe
Added a probe to test a TCP port connectivity. It tries to connect
to a determined TCP port of the remote host.
If the probe is ok, the time to connect is saved as value. If not,
an error message is saved.

--- a/lib/probes/ping_icmp/locales/en.yml
+++ b/lib/probes/ping_icmp/locales/en.yml
@@ -4,4 +4,7 @@ en:
       description: "It sends ICMP ping messages to a remote host. Requires root privileges."
       description_html: "It sends ICMP ping messages to a remote host.<br /><b>Requires root privileges</b>."
       error:
-        config_invalid: "Probe configuration invalid"
+        config_invalid: "Probe configuration invalid."
+        connection_refused: "Connection refused."
+        connection_reset: "Connection reset."
+        general_error: "[Exception] %{err}"
