Added monitoring sidebar, sidekiq view and highcharts gem.
ADD: Monitoring sidebar
Used to navigate between results, alert history and sidekiq control
panel.

ADD: Sidekiq control panel view
Used to view the sidekiq control panel inside the application.

ADD: Highcharts gem
It'll be used to show live charts in results views.

--- a/config/locales/monitoring/en.yml
+++ b/config/locales/monitoring/en.yml
@@ -3,7 +3,8 @@ en:
     index:
       title: "Monitoring"
     sidebar:
-      monitoring: "Monitoring"
-      hosts: "Hosts management"
-      services: "Services management"
-      alerts: "Alerts management"
+      overall_results: "Overall results"
+      service_results: "Service results"
+      host_results: "Host results"
+      alert_history: "Alert history"
+      sidekiq: "Sidekiq panel"
