Added service results action and changed some translations.
MODIFY: Some translations
In order to fix some mistakes in the english translations for error
pages.

ADD: Service results action
Added the controller action, the view and a first translation.

TODO: All the view of service results with live update.

--- a/config/locales/monitoring/en.yml
+++ b/config/locales/monitoring/en.yml
@@ -12,6 +12,8 @@ en:
         host: "Host"
         status: "Status"
         result: "Result"
+    service:
+      title: "Service results"
     sidebar:
       overall_results: "Overall results"
       service_results: "Service results"
