Modified template to fit new structure
MODIFY: Template
Now the navbar has more direct links, and the hosts, services and
alerts are independent.

ADD: Monitoring overview on index
Also, the monitoring overview is now on the index panel, because
theere is where we are going to show the general results, alerts
opened, etc.

MODIFY: Changed sidekiq panel url
Changed to revome the /configuration scope.

DELETE: Configuration sidebar and sctructure
Deleted in order to make the different parts independent.

MODIFY: Independent SASS file for fluid-columns

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -25,6 +25,7 @@ en:
         new: "Create a service"
         show: "View"
         edit: "Edit"
+        results: "Results"
         hosts: "Hosts"
         destroy: "Destroy"
         destroy_confirmation: "Do you really want to destroy this service?"
