Added alerts sidebar and changed results page to it's place
ADD: Alerts sidebar
Added a sidebar to alert pages in order to have something for the
future.

MODIFY: Service results page
Changed it's URL and the container that includes them.

--- a/config/locales/alerts/en.yml
+++ b/config/locales/alerts/en.yml
@@ -48,6 +48,8 @@ en:
         show: "Show user"
         destroy: "Unsubscribe"
         destroy_confirmation: "Do you really want to unsubscribe this user?"
+    sidebar:
+      all: "View all"
     form:
       name: "Name"
       name_placeholder: "Name of the service"
