--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -43,6 +43,8 @@ en:
     edit:
       title: "Edit a service"
       continue: "Save changes"
+    results:
+      title: "Service results"
     index_hosts:
       title: "Hosts to monitor"
       table:
