Changes in UI and i18n in charts

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -50,6 +50,12 @@ en:
       continue: "Save changes"
     results:
       title: "Service results"
+      results_history: "Results history"
+      chart:
+        title: "Results of %{service} service"
+        subtitle: "Executed every %{interval} seconds"
+        x_axis: "Date"
+        legend: "%{service} service"
       service_info:
         title: "Service information"
       hosts_results:
