--- a/lib/probes/tcp_connection/locales/en.yml
+++ b/lib/probes/tcp_connection/locales/en.yml
@@ -3,6 +3,8 @@ en:
     tcp_connection:
       description: "It checks the ability to perform a TCP connection to a port of the remote host"
       description_html: "It checks the ability to perform a <b>TCP connection</b> to a port of the remote host"
+      results_units: "milliseconds"
+      results_units_short: "ms"
       form:
         port: "Remote port"
         port_placeholder: "Remote port (1-65535)"
