--- a/lib/probes/dummy/locales/en.yml
+++ b/lib/probes/dummy/locales/en.yml
@@ -3,6 +3,8 @@ en:
     dummy:
       description: "This is a dummy probe that do nothing."
       description_html: "This is a <i>dummy</i> probe that do nothing."
+      results_units: "seconds"
+      results_units_short: "s"
       form:
         value: "Dummy value"
         value_placeholder: "Value to return"
