--- a/lib/probes/ping_icmp/locales/en.yml
+++ b/lib/probes/ping_icmp/locales/en.yml
@@ -3,6 +3,8 @@ en:
     ping_icmp:
       description: "It sends ICMP ping messages to a remote host. Requires root privileges."
       description_html: "It sends ICMP ping messages to a remote host.<br /><b>Requires root privileges</b>."
+      results_units: "milliseconds"
+      results_units_short: "ms"
       error:
         config_invalid: "Probe configuration invalid."
         connection_refused: "Connection refused."
