Big changes to results views
MODIFY: Service result view
Modified to make a good use of the space available. Now it has
two colums fully used.
Also, the latest results module has been improved to allow user
to go to service-in-host results panel.

ADD: Service in host results view
Added a view to show information about a service in a host. Currently
under development.

MODIFY: Host's services results view
To show a general view of the results of the services running in
a host.

MODIFY: Created a panel-based file architecture
Using partials for each module.

--- a/config/locales/hosts/en.yml
+++ b/config/locales/hosts/en.yml
@@ -45,10 +45,11 @@ en:
       title: "Host results"
       service_panel:
         title: "Results of %{service} service."
+        button: "View full report"
       chart:
-        title: "Results of %{service} service"
+        title: "Results of %{service} service on %{host}"
         subtitle: "Executed every %{interval} seconds"
-        x_axis: "Date"
+        x_axis: "Time stamp"
         legend: "%{service} service"
     sidebar:
       all: "View all hosts"
