Changes to work when there is no data.
MODIFY: Changes in results views
Information messages to show when there is no data to show.

MODIFY: Service model
When there is no result saved, resurn status nil (interpreted
as an UNKNOWN).

--- a/config/locales/hosts/en.yml
+++ b/config/locales/hosts/en.yml
@@ -43,6 +43,7 @@ en:
       continue: "Save changes"
     results:
       title: "Host results"
+      no_service: "There is no service monitored in this host (yet)."
       service_panel:
         title: "Results of %{service} service."
         button: "View full report"
