Added graphs data per host and service
ADD: Graphs' data per host and service
With filtered data, to show in service-in-host result's view

MODIFY: Latest results per host panel
Modified to show inactive hosts.

MODIFY: General changes
Changes to several panels and tables to make all the application
looking similar.

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -9,6 +9,7 @@ en:
       ok: "Ok"
       warning: "Warning"
       error: "Error"
+      inactive: "No data"
       unknown: "Unknown"
     priorities:
       priority_0: "High priority"
@@ -63,7 +64,7 @@ en:
         x_axis: "Time stamp"
         legend: "%{service} service"
       hosts_results:
-        title: "Lastest results per host"
+        title: "Latest results"
         table:
           host: "Host"
           status: "Status"
