Added result's resume live change
ADD: Result's resume live change
Added the possibility of changing the resume function of the chart
in service's result page. With this function, an user can change
the resume function used and the chart will be updated on real time.

MODIFY: Resume value calculation
Changed the resume value calculation process to be able to select
the resume function in run time.

MODIFY: Some translations
Fixed some translations.

--- a/config/locales/services/en.yml
+++ b/config/locales/services/en.yml
@@ -19,7 +19,7 @@ en:
       max_value: "Maximum value"
       max_value_explanation: "Get the maximum value"
       min_value: "Minimum value"
-      min_value_explantion: "Get the minimum value"
+      min_value_explanation: "Get the minimum value"
       mean_value: "Mean value"
       mean_value_explanation: "Get the mean of all the values"
       sum: "Sum value"
@@ -62,6 +62,7 @@ en:
         title: "Results of %{service} service"
         subtitle: "Executed every %{interval} seconds"
         x_axis: "Time stamp"
+        y_axis: "Result"
         legend: "%{service} service"
       hosts_results:
         title: "Latest results"
@@ -121,8 +122,8 @@ en:
       clean_interval: "Clean interval"
       clean_interval_placeholder: "Clean interval (seconds)"
       clean_interval_helper: "The time (in seconds) that the results of the testing are stored."
-      resume: "Resume"
-      resume_helper: "The function used to resume the data to show the results of multiple hosts."
+      resume: "Default resume"
+      resume_helper: "The default function used to resume the data of multiple hosts into one value."
       hosts: "Hosts"
       alerts: "Alerts"
       created_at: "Created at"
