Changed Alert and AlertRecord models and tests
ADD: AlertRecord model
Added model to store records about activation of alerts.

MODIFY: Alert model
Modified to include some changes in service/host/users assignation and
the inclusion of activation records.
Also, some auxiliary functions were added.

MODIFY: Some translation and UI changes.

--- a/config/locales/hosts/en.yml
+++ b/config/locales/hosts/en.yml
@@ -69,6 +69,7 @@ en:
       active: "Active"
       inactive: "Inactive"
       services: "Services assigned"
+      alerts: "Alerts assigned"
       created_at: "Created at"
       updated_at: "Updated at"
     notice:
