Added live change on hosts selected in Alert form
ADD: Live change on hosts selected in Alert form
Added AJAX functions to capture changes in Service's select box and
get the Host's select box from the server via Javascript.

MODIFY: Create and edit Alert controller functions
Changed to load and assign hosts of the alert when saving.

--- a/config/locales/alerts/en.yml
+++ b/config/locales/alerts/en.yml
@@ -61,6 +61,8 @@ en:
       service: "Service"
       service_not_assigned: "Not assigned"
       service_helper: "The service to which results are watched."
+      hosts: "Hosts"
+      hosts_helper: "The hosts which results for this service will be monitored"
       condition: "Activation condition"
       condition_helper: "The condition to match in order to activate the alert."
       limit: "Limit"
@@ -87,7 +89,8 @@ en:
       name_invalid: "The name is invalid, length must be between 2 and 30 characters."
       active_invalid: "The activation status is invalid. Check it and try again."
       service_invalid: "The service selected is invalid or isn't available at the moment."
+      hosts_invalid: "The hosts selected are invalid. Check them and try again."
       condition_invalid: "The condition selected is invalid. Check it and try again."
       limit_invalid: "The limit is invalid. Check that it is a number a try again."
-      condition_target_invalid: "The target selected is invalid. Check it and try again."
+      condition_target_invalid: "The condition's target selected is invalid. Check it and try again."
       error_control_invalid: "The error control status is invalid. Check it and try again."
